# workflow-doc-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md  architecture.html  cost-and-evals.md
docs/assets/: demo.js  main.js
evals/: README.md  capability_eval.py  regression_eval.py
notes/: architecture.md
outputs/: revenue_forecast_gemini.md
samples/: README.md
samples/revenue_forecast/: forecast_pipeline.py  input_data.csv  monthly_revenue.xlsx
site/: architecture.html  cost.html  demo.html  index.html  sample.html
site/assets/: demo.css  styles.css
src/workflow_doc_agent/: __init__.py  agent.py  cli.py  cost.py  prompts.py  providers.py  readers.py  retry.py  routing.py  schemas.py
tests/: test_cost_tracker.py  test_providers.py  test_readers.py
